welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value avancer
		avancer;
                ^Poucet:7: error: not found: value nbBis
	if (nbBis <= 2) { droite() }
            ^