welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while (!(sortieTrouvee())) {	
	do {
		var nbBis:Int = 0
		avancer;
		if (estSurBiscuit()) {nbBis = nbBis + 1}
	} while (!croisement())
	if (nbBis <= 2) { droite() }
	else {gauche}
}
